--- a/teste.html
+++ b/teste.html
@@ -5,6 +5,6 @@
     <meta charset="utf-8">
   </head>
   <body>
-    Aqui vai o código HTML que fará seu site aparecer.
+    Aqui vai o codigo HTML que fará seu site.ok
   </body>
 </html>
